# crawler4j

./: .env.example  .gitignore  AGENTS.md  FLOWCHARTS.md  GEMINI.md  LICENSE  MANUAL.md  README.md  calendar.html  citys.html  crawler4j.spec  discard.html  laobao.html  login.html  main.py  mkdocs.yml  pyproject.toml  reson.html  text.html  user_manual.md  滑块.html  点选.html
.agent/: AGENTS.md
.agent/personas/: chief-architect.md  kernel-engineer.md  plugin-expert.md  qa-engineer.md  sdk-maintainer.md  tech-writer.md  ui-designer.md
.agent/rules/: agent.md  crawler4j-rules.md  project-constraints.md  roles.md
.agent/skills/: project_tools.md  verify-tools.md
.agent/workflows/: arch-design.md  arch-review.md  bug-fix.md  code-review.md  dev-core.md  dev-module.md  dev-sdk.md  documentation.md  feature-dev.md  plugin-expert.md  review.md  sdk-maintainer.md  tech-writer.md  ui.md  verification.md
.factory/: project.json  tech-profile.json
.factory/memory/: agent-session.md  api.summary.md  architecture.summary.md  autonomy-rules.md  change-summary.md  cr-019.summary.md  current-state.md  design-assets.summary.md  doc-map.md  evolution-baseline.md  memory-compaction-report.md  memory-index.md  motivation-state.md  operations.summary.md  pr.summary.md  project-index.md  release.summary.md  remote-pr.summary.md  requirements.summary.md  review-ledger.jsonl  role-charter.project.md  runtime-brief.md  session-ledger.jsonl  tasks.summary.md  tech-stack.summary.md  tests.summary.md  traceability.summary.md
.factory/process/: execution-log.md  quality-check-report.md  stage-check-report.md
.github/workflows/: build-windows-release.yml  notify-docs-stratego.yml  publish-docs.yml
.specify/memory/: constitution.md
crawler4j_contracts/: README.md  __init__.py  context.py  pyproject.toml
crawler4j_sdk/: README.md  __init__.py  assembler.py  base.py  context.py  db.py  extensions.py  pyproject.toml  result.py  workflow.py
crawler4j_sdk/cli/: __init__.py  commands.py  templates.py
deploy/nginx/: crawler4j-updates.example.conf
docs/: getting-started.md  index.md  sms.md
docs/00-governance/: project-charter.md
docs/01-discovery/: brainstorm-record.md  current-state-analysis.md  index.md  input.md  legacy-doc-audit.md
docs/01-getting-started/: document-map.md  index.md  project-overview.md  quick-start.md
docs/02-requirements/: index.md  prd.md  requirements-analysis.md  requirements-verification.md
docs/02-user-guide/: admin-guide.md  configuration.md  exception-cases.md  index.md  installation.md  job-detail-guide.md  usage.md  user-guide.md
docs/03-developer-guide/: build-modules.md  core-concepts.md  debugging.md  index.md  module-structure.md  quickstart.md  reference-core-capabilities.md  reference-sdk-and-cli.md  shipping.md  troubleshooting.md  ui-and-data-table.md
docs/03-solution/: api-design.md  index.md  module-boundaries.md  system-architecture.md  technical-selection.md
docs/04-delivery/: execution-log.md  implementation-plan.md  index.md  task-breakdown.md  wbs.md
docs/04-project-development/: index.md
docs/05-quality/: design-implementation-audit.md  index.md  quality-gates.md  test-plan.md
docs/06-release/: index.md  release-notes.md  version-governance.md
docs/07-operations/: deployment-guide.md  index.md
docs/08-handover/: getting-started.md  index.md  module-developer-guide.md  user-guide.md
docs/09-evolution/: index.md
docs/archive/: index.md
docs/design/: 01-general-architecture.md  index.md  module-01-runtime-environment.md  module-02-task-strategy.md  module-04-data-persistence.md  module-05-sdk.md
docs/kernel-dev/: internals.md  requirements.md  roadmap.md
docs/model-development/: index.md
docs/plugin-dev/: configuration.md  plugin-system.md  tutorial-crawler.md  tutorial-monitor.md  ui.md  workflow.md
docs/project-process/: core-maintainer-guide.md  index.md
docs/sdk/: core.md
docs/srs/: 03-requirements-analysis.md  index.md
docs/test/: index.md  test-02-tsm.md  test-03-mms.md  test-04-persistence.md  test-05-sdk.md
docs/traceability/: document-index.md  index.md  requirements-matrix.md
docs/user-guide/: build-release.md  configuration.md  dashboard-usage.md  deployment.md
example/: content.js  injected.js
migrations/: __init__.py  migrate.py  v001_add_labor_locking.py  v002_add_cooldown_fields.py  v003_task_plugin_system.py  v004_add_workflow_id.py
modules/: README.md
modules/ctrip/: config.py  config_schema.json  login.py  module.py  module.yaml  strategy.yaml
scripts/: __init__.py  build_workspace_packages.py  db_cli.py  debug_runner.py  deploy_docs.sh  deploy_macos_internal_release.py  deploy_windows_release.py  generate_icon.py  install_sparkle_vendor.py  package_desktop_app.py  package_macos_internal_release.py  package_windows_release.py  rebuild_app_icon_assets.py  release_packaging_helpers.py  release_upload.py  smoke_test_ui.py
scripts/tasks/: README.md  claim_task.py  ctrip_labor_task.py  example_task.py  labor_login_task.py  submit_task.py
spec/: e.md
specs/001-auto-crawler-gui/: bitbrowser-api.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  ui-design.md
src/: __version__.py  config.py  main.py
src/automation/: __init__.py  driver.py
src/cli/: __init__.py  commands.py  module_commands.py
src/core/: __init__.py  account_manager.py  browser_api.py  browser_detector.py  environment_manager.py  events.py  scheduler.py  task_orchestrator.py  task_runner.py  workflow_executor.py
src/plugins/: __init__.py  flow_engine.py  hooks.py  models.py  module_loader.py  module_models.py  repositories.py  script_executor.py  script_manager.py
src/ui/: app.py  dashboard.py  main_window.py  shell.py
strategies/: ctrip_hotel_detail.yaml
tests/: analyze_captcha.py  conftest.py  debug_captcha_detailed.py  debug_captcha_scaling.py  inspect_ctrip.py  manual_test_ctrip_search_mock.py  manual_test_login.py  test_batch_import.py  test_proxy_pool_logic.py  verify_async_browser.py  verify_captcha_issues.py  verify_concurrency.py  verify_login_flow.py
(+622 files in other folders)
