[project]
name = "crawler4j"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "pyqt6>=6.10.1",
    "requests>=2.32.5",
    "ddddocr>=1.4.11",
    "numpy>=2.4.0",
    "qasync>=0.28.0",
    "httpx>=0.28.1",
    "aiohttp>=3.13.2",
    "watchdog>=4.0.0",
]

[project.scripts]
start = "src.main:main"
crawler4j = "crawler4j_sdk.cli.commands:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-qt>=4.5.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "crawler4j_sdk"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["RUF001", "RUF002", "RUF003"]  # Ignore ambiguous unicode characters (Chinese)

# ==================== SDK独立发布配置 ====================
# 如需单独发布SDK到PyPI，创建 crawler4j_sdk/pyproject.toml：
#
# [project]
# name = "crawler4j-sdk"
# version = "1.0.0"
# description = "Crawler4j Task Script SDK"
# requires-python = ">=3.12"
# dependencies = ["aiohttp>=3.13.0", "playwright>=1.40.0"]
#
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

