[project]
name = "crawler4j-workspace"
version = "0.0.0"
description = "Development workspace for the crawler4j monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawler4j",
    "crawler4j-sdk",
    "crawler4j-contracts",
]

[project.scripts]
build = "scripts.build_workspace_packages:build_main"
deploy-macos-internal-release = "scripts.deploy_macos_internal_release:main"
install-sparkle = "scripts.install_sparkle_vendor:main"
package-desktop = "scripts.package_desktop_app:main"
package-windows-release = "scripts.package_windows_release:main"
package-macos-internal-release = "scripts.package_macos_internal_release:main"
publish = "scripts.build_workspace_packages:publish_main"

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-qt>=4.5.0",
    "ruff>=0.14.10",
]

[tool.uv.sources]
crawler4j = { workspace = true }
crawler4j-sdk = { workspace = true }
crawler4j-contracts = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]

[tool.ruff]
line-length = 120
src = [
    "packages/*",
    "packages/*/src",
]
extend-exclude = [
    "packages/*/tests/analyze_*.py",
    "packages/*/tests/debug_*.py",
    "packages/*/tests/manual_*.py",
    "packages/*/tests/verify_*.py",
]

[tool.ruff.lint]
ignore = ["RUF001", "RUF002", "RUF003"]  # Ignore ambiguous unicode characters (Chinese)
