[project]
name = "crawler4j-contracts"
version = "1.0.1"
description = "Crawler4j shared contracts for Core and SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "__init__.py",
    "context.py",
    "py.typed",
    "result.py",
]

[tool.hatch.build.targets.wheel.sources]
"" = "crawler4j_contracts"
