[project]
name = "crawler4j-sdk"
version = "1.0.0"
description = "Crawler4j Task Script SDK - 用于开发任务脚本的开发工具包"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "playwright>=1.40.0",
]

[project.scripts]
crawler4j = "crawler4j_sdk.cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
