[project]
name = "crawler4j-sdk"
version = "1.0.3"
description = "Crawler4j Task Script SDK - 用于开发任务脚本的开发工具包"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawler4j-contracts>=1.0.1,<2.0.0",
    "aiohttp>=3.13.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
crawler4j = "crawler4j_sdk.cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "__init__.py",
    "base.py",
    "cli",
    "context.py",
    "db.py",
    "extensions.py",
    "py.typed",
    "result.py",
    "workflow.py",
]

[tool.hatch.build.targets.wheel.sources]
"" = "crawler4j_sdk"
